--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,13 @@ Debug/GameSubject.tlog/link.command.1.tlog
 Debug/GameSubject.tlog/link.read.1.tlog
 Debug/GameSubject.tlog/link.write.1.tlog
 Debug/vc141.idb
+.vs/GameSubject/v15/Browse.VC.db
+.vs/samples/v15/Browse.VC.db
+.vs/samples/v15/Browse.VC.opendb
+.vs/samples/v15/Solution.VC.db
+.vs/samples/v15/Solution.VC.db-shm
+.vs/samples/v15/Solution.VC.db-wal
+.vs/ProjectSettings.json
+.vs/slnx.sqlite
+.vs/VSWorkspaceState.json
+01-Skeleton/01-Skeleton.vcxproj
