fix some lost file

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,14 @@ Debug/vc141.idb
 .vs/slnx.sqlite
 .vs/VSWorkspaceState.json
 01-Skeleton/01-Skeleton.vcxproj
+Game/Debug/Game.tlog/CL.command.1.tlog
+Game/Debug/Game.tlog/CL.read.1.tlog
+Game/Debug/Game.tlog/CL.write.1.tlog
+Game/Debug/Game.tlog/Game.lastbuildstate
+Game/Debug/Game.tlog/link.command.1.tlog
+Game/Debug/Game.tlog/link.read.1.tlog
+Game/Debug/Game.tlog/link.write.1.tlog
+Game/Debug/vc141.idb
+.vs/Game/v15/ipch/AutoPCH/952673c981a6e7bd/MAIN.ipch
+.vs/Game/v15/Browse.VC.db
+.vs/Game/v15/Browse.VC.opendb
